Updated readme and implemented SRE.plot()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(FRK)
 export(LinePlotTheme)
 export(SRE)
 export(SRE.fit)
+export(SRE.plot)
 export(SRE.predict)
 export(STplane)
 export(STsphere)
@@ -48,11 +49,8 @@ export(unobserved_BAUs)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
-exportMethods(observed_BAUs)
 exportMethods(predict)
-exportMethods(remove_BAUs)
 exportMethods(reverse_spatial_coords)
-exportMethods(unobserved_BAUs)
 import(Matrix)
 import(Rcpp)
 import(RcppEigen)
