--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,6 @@ export(FRK)
 export(LinePlotTheme)
 export(SRE)
 export(SRE.fit)
-export(SRE.plot)
 export(SRE.predict)
 export(STplane)
 export(STsphere)
@@ -49,6 +48,7 @@ export(unobserved_BAUs)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
+exportMethods(plot)
 exportMethods(predict)
 exportMethods(reverse_spatial_coords)
 import(Matrix)
