Updated documentation for plotting functions and exported plot_spatial_or_ST

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(nres)
 export(observed_BAUs)
 export(opts_FRK)
 export(plane)
+export(plot_spatial_or_ST)
 export(predict)
 export(radial_basis)
 export(real_line)
