--- a/NAMESPACE
+++ b/NAMESPACE
@@ -72,6 +72,7 @@ importFrom(plyr,dlply)
 importFrom(plyr,rbind.fill)
 importFrom(statmod,rinvgauss)
 importFrom(stats,.getXlevels)
+importFrom(stats,as.formula)
 importFrom(stats,coefficients)
 importFrom(stats,dist)
 importFrom(stats,formula)
