--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -19,7 +19,7 @@ Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     on which this package is based. The package FRK provides helper functions to model, 
     fit, and predict using an SRE model with relative ease. FRK may be used for
     both Gaussian and non-Gaussian data.
-BugReports: http://github.com/andrewzm/FRK/issues
+BugReports: https://github.com/andrewzm/FRK/issues
 Depends:
     R (>= 3.2.0)
 Suggests:
