--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,7 @@ Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     projected field is a key building block of the Spatial Random Effects (SRE) model, 
     on which this package is based. The package FRK provides helper functions to model, 
     fit, and predict using an SRE with relative ease.
-BugReports: http://github.com/andrewzm/FRK/issues
+BugReports: https://github.com/andrewzm/FRK/issues/
 Depends:
     R (>= 3.5.0)
 Suggests:
