--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ FRK.Rproj
 .RData
 vignettes/*.log
 vignettes/*.aux
-vignettes/*.tex
 vignettes/*.tex~
 vignettes/*.synctex.gz
 vignettes/figure
@@ -24,8 +23,8 @@ pres/
 bigstudies
 Permissions
 *.dll
-*.Rnw
-*.bib
 FRKTMB_paper
 .DS_Store
 Github_example.R
+doc
+Meta
