--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,10 +66,13 @@ importFrom(Hmisc,truncPOSIXt)
 importFrom(Rcpp,cppFunction)
 importFrom(VCA,MPinv)
 importFrom(digest,digest)
+importFrom(ggpubr,ggarrange)
 importFrom(grDevices,chull)
 importFrom(plyr,ddply)
 importFrom(plyr,dlply)
 importFrom(plyr,rbind.fill)
+importFrom(reshape2,melt)
+importFrom(scales,scientific)
 importFrom(statmod,rinvgauss)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
