--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: FRK
 Type: Package
 Title: Fixed Rank Kriging
 Version: 2.0.0
-Date: 2018-07-11
+Date: 2020-05-07
 Authors@R: c(
     person("Andrew", "Zammit-Mangion", , "andrewzm@gmail.com", c("aut", "cre")),
     person("Matthew", "Sainsbury-Dale", , "msdale@uow.edu.au", c("aut")))
@@ -17,8 +17,7 @@ Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     and the use of observations with varying support (with known error variance). The 
     projected field is a key building block of the Spatial Random Effects (SRE) model, 
     on which this package is based. The package FRK provides helper functions to model, 
-    fit, and predict using an SRE model with relative ease. FRK may be used for
-    both Gaussian and non-Gaussian data.
+    fit, and predict using an SRE model with relative ease, with both Gaussian and non-Gaussian data.
 BugReports: https://github.com/andrewzm/FRK/issues
 Depends:
     R (>= 3.2.0)
