--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,6 @@ export(manifold)
 export(measure)
 export(nbasis)
 export(nres)
-export(observed_BAUs)
 export(opts_FRK)
 export(plane)
 export(plot_spatial_or_ST)
@@ -47,6 +46,7 @@ export(unobserved_BAUs)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
+exportMethods(info_fit)
 exportMethods(plot)
 exportMethods(predict)
 import(Matrix)
