Converted loglik to an S4 method

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
 exportMethods(info_fit)
+exportMethods(loglik)
 exportMethods(plot)
 exportMethods(predict)
 import(Matrix)
