--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(manifold)
 export(measure)
 export(nbasis)
 export(nres)
+export(observed_BAUs)
 export(opts_FRK)
 export(plane)
 export(plot_spatial_or_ST)
@@ -46,10 +47,13 @@ export(unobserved_BAUs)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
+exportMethods(coef)
 exportMethods(info_fit)
 exportMethods(loglik)
+exportMethods(observed_BAUs)
 exportMethods(plot)
 exportMethods(predict)
+exportMethods(unobserved_BAUs)
 import(Matrix)
 import(Rcpp)
 import(RcppEigen)
