Removed VCA from the dependencies

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,7 +47,7 @@ install:
 - Rscript -e 'install.packages("covr", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("lintr", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("statmod", repos = "https://cran.rstudio.com")'
-- Rscript -e 'install.packages("VCA", repos = "https://cran.rstudio.com")'
+# - Rscript -e 'install.packages("VCA", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("ggpubr", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("reshape2", repos = "https://cran.rstudio.com")'
 
