--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,14 +10,15 @@ Maintainer: Andrew Zammit-Mangion <andrewzm@gmail.com>
 VignetteBuilder: knitr
 Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling
     and prediction with large datasets. The approach, discussed in Cressie and
-    Johannesson (2008) <DOI:10.1111/j.1467-9868.2007.00633.x>, decomposes the field, 
-    and hence the covariance function, using a fixed set of n basis functions, 
-    where n is typically much smaller than the number of data points (or polygons) m. 
+    Johannesson (2008) <DOI:10.1111/j.1467-9868.2007.00633.x>, decomposes the 
+    spatial/spatio-temporal field, and hence the covariance function, using a f
+    ixed set of r basis functions, where r is typically much smaller than the 
+    number of data points (or polygons) m. 
     The method naturally allows for non-stationary, anisotropic covariance functions 
-    and the use of observations with varying support (with known error variance). The 
-    projected field is a key building block of the Spatial Random Effects (SRE) model, 
-    on which this package is based. The package FRK provides helper functions to model, 
-    fit, and predict using an SRE model with relative ease, with both Gaussian and non-Gaussian data.
+    and the use of observations with varying support (with known error variance).  
+    The package FRK provides helper functions to model, fit, and predict using 
+    the fixed-rank kriging approach with relative ease, using both Gaussian 
+    and non-Gaussian data.
 BugReports: https://github.com/andrewzm/FRK/issues
 Depends:
     R (>= 3.2.0)
