--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(nres)
 export(observed_BAUs)
 export(opts_FRK)
 export(plane)
+export(plot)
 export(plot_spatial_or_ST)
 export(predict)
 export(radial_basis)
@@ -52,6 +53,7 @@ exportMethods(info_fit)
 exportMethods(loglik)
 exportMethods(observed_BAUs)
 exportMethods(plot)
+exportMethods(plot_spatial_or_ST)
 exportMethods(predict)
 exportMethods(unobserved_BAUs)
 import(Matrix)
