--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,10 +6,10 @@ Date: 2021-05-07
 Authors@R: c(
     person("Andrew", "Zammit-Mangion", , "andrewzm@gmail.com", c("aut", "cre")),
     person("Matthew", "Sainsbury-Dale", , "msdale@uow.edu.au", c("aut")))
-Maintainer: Andrew Zammit-Mangion <andrewzm@gmail.com>
+Maintainer: Matthew Sainsbury-Dale <msdale@uow.edu.au>
 VignetteBuilder: knitr
 Description: Fixed Rank Kriging is a tool for spatial/spatio-temporal modelling and prediction with large datasets. The approach decomposes the field, and hence the covariance function, using a fixed set of r basis functions, where r is typically much smaller than the number of data points (or polygons) m. This low-rank basis-function representation facilitates the modelling of 'big' spatial/spatio-temporal data. The method naturally allows for non-stationary, anisotropic covariance functions. Discretisation of the spatial domain into so-called basic areal units (BAUs) facilitates the use of observations with varying support (i.e., both point-referenced and areal supports, potentially simultaneously), and prediction over arbitrary user-specified regions. The package `FRK` caters for Gaussian and non-Gaussian data, employing a spatial generalised linear mixed model (GLMM) framework  to cater for Poisson, binomial, negative-binomial, gamma, and inverse-Gaussian distributed data. `FRK` also supports inference over various manifolds, including the 2D plane and 3D sphere, and it provides helper functions to model, fit, predict, and plot with relative ease. Zammit-Mangion and Cressie <arXiv:1705.08105> describe `FRK` in a Gaussian setting, and detail it's use of basis functions and BAUs.
-BugReports: https://github.com/andrewzm/FRK/issues
+BugReports: https://github.com/andrewzm/FRK/issues/
 Depends:
     R (>= 3.2.0)
 Suggests:
@@ -46,8 +46,8 @@ Imports:
     ggpubr, 
     reshape2, 
     scales
-Additional_repositories: https://andrewzm.github.io/dggrids-repo, 
-                         https://inla.r-inla-download.org/R/stable
+Additional_repositories: https://andrewzm.github.io/dggrids-repo/, 
+                         https://inla.r-inla-download.org/R/stable/
 License: GPL (>= 2)
 NeedsCompilation: yes
 LazyData: true
