--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(TensorP)
 export(auto_BAUs)
 export(auto_basis)
 export(coef)
+export(combine_basis)
 export(df_to_SpatialPolygons)
 export(distR)
 export(distance)
