--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,9 @@
 
 S3method(as.data.frame,Basis)
 S3method(as.data.frame,TensorP_Basis)
+export(AIC)
 export(BAUs_from_points)
+export(BIC)
 export(Basis)
 export(EmptyTheme)
 export(Euclid_dist)
@@ -24,14 +26,17 @@ export(distR)
 export(distance)
 export(draw_world)
 export(eval_basis)
+export(fitted)
 export(gc_dist)
 export(gc_dist_time)
 export(info_fit)
 export(local_basis)
+export(logLik)
 export(loglik)
 export(manifold)
 export(measure)
 export(nbasis)
+export(nobs)
 export(nres)
 export(observed_BAUs)
 export(opts_FRK)
@@ -42,20 +47,29 @@ export(predict)
 export(radial_basis)
 export(real_line)
 export(remove_basis)
+export(residuals)
 export(show_basis)
+export(simulate)
 export(sphere)
 export(type)
 export(unobserved_BAUs)
 exportMethods("$")
 exportMethods("$<-")
 exportMethods("data.frame<-")
+exportMethods(AIC)
+exportMethods(BIC)
+exportMethods(binned_data)
 exportMethods(coef)
+exportMethods(fitted)
 exportMethods(info_fit)
+exportMethods(logLik)
 exportMethods(loglik)
+exportMethods(nobs)
 exportMethods(observed_BAUs)
 exportMethods(plot)
 exportMethods(plot_spatial_or_ST)
 exportMethods(predict)
+exportMethods(residuals)
 exportMethods(unobserved_BAUs)
 import(Matrix)
 import(Rcpp)
@@ -79,6 +93,7 @@ importFrom(plyr,dlply)
 importFrom(plyr,rbind.fill)
 importFrom(reshape2,melt)
 importFrom(scales,scientific)
+importFrom(scoringRules,crps_sample)
 importFrom(statmod,rinvgauss)
 importFrom(stats,.getXlevels)
 importFrom(stats,as.formula)
