--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(TensorP)
 export(auto_BAUs)
 export(auto_basis)
 export(coef)
+export(coef_uncertainty)
 export(combine_basis)
 export(df_to_SpatialPolygons)
 export(distR)
@@ -59,6 +60,7 @@ exportMethods("data.frame<-")
 exportMethods(AIC)
 exportMethods(BIC)
 exportMethods(coef)
+exportMethods(coef_uncertainty)
 exportMethods(fitted)
 exportMethods(info_fit)
 exportMethods(logLik)
