--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -48,3 +48,4 @@ jobs:
         with:
           upload-snapshots: true
           args: 'c("--no-vignettes")'
+          build_args: 'c("--no-build-vignettes")'
