--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -47,5 +47,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
-          args: 'c("--no-vignettes")'
+          args: 'c("--no-vignettes", "--no-manual")'
           build_args: 'c("--no-build-vignettes", "--no-manual")'
