--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -48,5 +48,5 @@ jobs:
         with:
           upload-snapshots: true
           args: 'c("--no-vignettes", "--no-manual")'
-          build_args: 'c("--no-build-vignettes", "--no-manual")'
+          build_args: 'c("--no-build-vignettes")'
           error-on: 'c("error")'
