--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -2,9 +2,9 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   push:
-    branches: [main, master, 2023_05_TEX_GHA]
+    branches: [main, master]
   pull_request:
-    branches: [main, master, 2023_05_TEX_GHA]
+    branches: [main, master]
 
 name: R-CMD-check
 
