--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -47,6 +47,6 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
-          args: 'c("--no-vignettes", "--no-manual")'
+          args: 'c("--no-vignettes")'
           build_args: 'c("--no-build-vignettes")'
           error-on: 'c("error")'
