Manual and vignettes compile; now try to build dggrids and INLA

--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -42,8 +42,9 @@ jobs:
           needs: check
 
       - name: Install dggrids and INLA
-        run: Rscript -e 'devtools::install_github("andrewzm/dggrids")'
-	run: Rscript -e 'devtools::install_github("andrewzm/inla")'
+        run: |
+	  Rscript -e 'devtools::install_github("andrewzm/dggrids")'
+	  Rscript -e 'devtools::install_github("andrewzm/inla")'
 
       - uses: r-lib/actions/setup-tinytex@v2
         env:
