Manual and vignettes compile; now try to build dggrids and INLAv5

--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -43,7 +43,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck
+          extra-packages: any::rcmdcheck, INLA=?ignore, dggrids=?ignore
           needs: check
 
       - uses: r-lib/actions/setup-tinytex@v2
