--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -53,4 +53,5 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         with:
           upload-snapshots: true
+	  build_args: 'c("--compact-vignettes=gs+qpdf")'
           error-on: 'c("error")'
