Fix to pkdown YAML to also install dggrids and INLA

--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -21,14 +21,9 @@ jobs:
         with:
           use-public-rspm: true
 
-      - name: Install dggrids and INLA
-        run: |
-          Rscript -e "install.packages('INLA', repos=c(getOption('repos'), INLA='https://inla.r-inla-download.org/R/stable'), dep=TRUE)"
-          Rscript -e "install.packages('dggrids', repos=c(getOption('repos'), dggrids='https://andrewzm.github.io/dggrids-repo/'), dep=TRUE)"
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr
+          extra-packages: any::covr, INLA=?ignore, dggrids=?ignore
           needs: coverage
 
       - name: Test coverage
