--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -28,14 +28,9 @@ jobs:
         with:
           use-public-rspm: true
 
-      - name: Install dggrids and INLA
-        run: |
-          Rscript -e "install.packages('INLA', repos=c(getOption('repos'), INLA='https://inla.r-inla-download.org/R/stable'), dep=TRUE)"
-          Rscript -e "install.packages('dggrids', repos=c(getOption('repos'), dggrids='https://andrewzm.github.io/dggrids-repo/'), dep=TRUE)"
-
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::.
+          extra-packages: any::pkgdown, local::., INLA=?ignore, dggrids=?ignore
           needs: website
 
       - name: Build site
