--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,9 @@ importFrom(Hmisc,roundPOSIXt)
 importFrom(Hmisc,truncPOSIXt)
 importFrom(Rcpp,cppFunction)
 importFrom(digest,digest)
+importFrom(fmesher,fm_mesh_2d_inla)
+importFrom(fmesher,fm_nonconvex_hull_inla)
+importFrom(fmesher,fm_segm)
 importFrom(ggpubr,ggarrange)
 importFrom(grDevices,chull)
 importFrom(plyr,ddply)
