--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -36,14 +36,13 @@ jobs:
           http-user-agent: ${{ matrix.config.http-user-agent }}
           use-public-rspm: true
 
-      - name: Install dggrids and INLA
+      - name: Install dggrids
         run: |
-          Rscript -e "install.packages('INLA', repos=c(getOption('repos'), INLA='https://inla.r-inla-download.org/R/stable'), dep=TRUE)"
           Rscript -e "install.packages('dggrids', repos=c(getOption('repos'), dggrids='https://andrewzm.github.io/dggrids-repo/'), dep=TRUE)"
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::rcmdcheck, INLA=?ignore, dggrids=?ignore
+          extra-packages: any::rcmdcheck, dggrids=?ignore
           needs: check
 
       - uses: r-lib/actions/setup-tinytex@v2
