--- a/.github/workflows/pkgdown.yaml
+++ b/.github/workflows/pkgdown.yaml
@@ -30,7 +30,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::pkgdown, local::., INLA=?ignore, dggrids=?ignore
+          extra-packages: any::pkgdown, local::., dggrids=?ignore
           needs: website
 
       - name: Build site
