--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -23,7 +23,7 @@ jobs:
 
       - uses: r-lib/actions/setup-r-dependencies@v2
         with:
-          extra-packages: any::covr, INLA=?ignore, dggrids=?ignore
+          extra-packages: any::covr, dggrids=?ignore
           needs: coverage
 
       - name: Test coverage
