--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,7 @@ install:
 - Rscript -e 'install.packages("digest", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("plyr", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("dplyr", repos = "https://cran.rstudio.com")'
+- Rscript -e 'install.packages("fmesher", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("ggplot2", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("splancs", repos = "https://cran.rstudio.com")'
 - Rscript -e 'install.packages("rgdal", repos = "http://cran.rstudio.com")'
@@ -57,7 +58,6 @@ install:
 
 
 - Rscript -e 'devtools::install_github("andrewzm/dggrids")'
-- Rscript -e 'devtools::install_github("andrewzm/inla")'
 # - Rscript -e 'devtools::install_github("jimhester/covr")'
 # - Rscript -e 'devtools::install_github("jimhester/lintr")'
 # - Rscript -e "install.packages('INLA', repos='https://www.math.ntnu.no/inla/R/stable')"
